--- a/src/main/webapp/WEB-INF/pages/index.html
+++ b/src/main/webapp/WEB-INF/pages/index.html
@@ -133,53 +133,39 @@
     }
 </style>
 <script>
-    // var Main = {
-    //     methods: {
-    //         handleClick(row) {
-    //             console.log(row);
-    //         }
-    //     },
-    //
-    //     data() {
-    //         return {
-    //             tableData: [{
-    //                 date: '2016-05-02',
-    //                 name: '王小虎',
-    //                 province: '上海',
-    //                 city: '普陀区',
-    //                 address: '上海市普陀区金沙江路 1518 弄',
-    //                 zip: 200333
-    //             }, {
-    //                 date: '2016-05-04',
-    //                 name: '王小虎',
-    //                 province: '上海',
-    //                 city: '普陀区',
-    //                 address: '上海市普陀区金沙江路 1517 弄',
-    //                 zip: 200333
-    //             }, {
-    //                 date: '2016-05-01',
-    //                 name: '王小虎',
-    //                 province: '上海',
-    //                 city: '普陀区',
-    //                 address: '上海市普陀区金沙江路 1519 弄',
-    //                 zip: 200333
-    //             }, {
-    //                 date: '2016-05-03',
-    //                 name: '王小虎',
-    //                 province: '上海',
-    //                 city: '普陀区',
-    //                 address: '上海市普陀区金沙江路 1516 弄',
-    //                 zip: 200333
-    //             }]
-    //         }
-    //     }
-    // }
-    // var Ctor = Vue.extend(Main)
-    // new Ctor().$mount('#app')
     var vue = new Vue({
         el: '#app',
         data: {
-            "tutors": []
+            "tutors": [],
+            tableData: [{
+                date: '2016-05-02',
+                name: '王小虎',
+                province: '上海',
+                city: '普陀区',
+                address: '上海市普陀区金沙江路 1518 弄',
+                zip: 200333
+            }, {
+                date: '2016-05-04',
+                name: '王小虎',
+                province: '上海',
+                city: '普陀区',
+                address: '上海市普陀区金沙江路 1517 弄',
+                zip: 200333
+            }, {
+                date: '2016-05-01',
+                name: '王小虎',
+                province: '上海',
+                city: '普陀区',
+                address: '上海市普陀区金沙江路 1519 弄',
+                zip: 200333
+            }, {
+                date: '2016-05-03',
+                name: '王小虎',
+                province: '上海',
+                city: '普陀区',
+                address: '上海市普陀区金沙江路 1516 弄',
+                zip: 200333
+            }]
         },
         methods: {
             getTutors() {
