--- a/src/main/webapp/WEB-INF/pages/tutor/showTutors.html
+++ b/src/main/webapp/WEB-INF/pages/tutor/showTutors.html
@@ -69,32 +69,7 @@
     var vue = new Vue({
         el: "#app",
         data: {
-            "tutors": [],
-            "tableLabel": [
-                {
-                    "prop": "name",
-                    "label": "导师姓名",
-                    "width": "120"
-                },
-                {
-                    "prop": "tutorInfo.title",
-                    "label": "职称",
-                    "width": "120"
-                }, {
-                    "prop": "tutorInfo.educationBackground",
-                    "label": "学历",
-                    "width": "120"
-                }, {
-                    "prop": "tutorInfo.researchField",
-                    "label": "研究领域"
-                }, {
-                    "prop": "tutorInfo.lessons",
-                    "label": "任教课程"
-                }, {
-                    "prop": "tutorInfo.selfIntroduction",
-                    "label": "自我介绍"
-                }
-            ]
+            "tutors": []
         },
         methods: {},
         created() {
