--- a/src/main/webapp/WEB-INF/pages/register.html
+++ b/src/main/webapp/WEB-INF/pages/register.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>注册</title>
+    <title>学生导师双选系统</title>
     <base th:href="@{/}" href="/TwoWaySelectSystem/"/><!--base标签，设置基准访问路径,如果某个路径要基于base编写，那么就不可以用斜杠开头-->
     <!--使用绝对路径-->
     <!--引入 element-ui 的样式，-->
@@ -20,83 +20,87 @@
     <script src="static/js/axios-0.18.0.js"></script>
 </head>
 <body>
-
-<el-form
-        class="form-content"
-        ref="register"
-        :model="register"
-        :rules="rules"
->
-    <el-form-item prop="name">
-        <i class="el-icon-user-solid"></i>
-        <el-input v-model="register.name" placeholder="用户名:"></el-input>
-    </el-form-item>
-    <el-form-item prop="phone">
-        <i class="el-icon-phone"></i>
-        <el-input v-model="register.phone" placeholder="手机号:"></el-input>
-    </el-form-item>
-    <el-form-item prop="password">
-        <i class="el-icon-lock"></i>
-        <el-input v-model="register.password" placeholder="输入密码:" type="password" show-password></el-input>
-    </el-form-item>
-    <el-form-item prop="checkPass">
-        <i class="el-icon-lock"></i>
-        <el-input v-model="register.checkPass" placeholder="再次确认密码:" type="password" show-password></el-input>
-    </el-form-item>
-    <el-form-item>
-        <el-button class="btn-login" type="primary" @click="registerForStu('register')">Register</el-button>
-        <el-button class="btn-login" type="primary" @click="registerForTutor('register')">Register</el-button>
-    </el-form-item>
-</el-form>
+<div id="app">
+    <el-form :model="ruleForm" status-icon :rules="rules" ref="ruleForm" label-width="100px" class="demo-ruleForm">
+        <el-form-item label="学号" prop="number">
+            <el-input v-model.number="ruleForm.number"></el-input>
+        </el-form-item>
+        <el-form-item label="密码" prop="pass">
+            <el-input type="password" v-model="ruleForm.pass" autocomplete="off"></el-input>
+        </el-form-item>
+        <el-form-item label="确认密码" prop="checkPass">
+            <el-input type="password" v-model="ruleForm.checkPass" autocomplete="off"></el-input>
+        </el-form-item>
+        <el-form-item>
+            <el-button type="primary" @click="submitForm('ruleForm')">注册</el-button>
+<!--            跳转到登陆页面-->
+            <el-button @click="resetForm('ruleForm')">登陆</el-button>
+        </el-form-item>
+    </el-form>
+</div>
 <script>
     var Main = {
-        data () {
-            // 密码验证
-            var validatePass = (rule,value,callback)=>{
-                if(value === ''){
-                    callback(new Error('请输入密码'))
-                }else{
-                    if(this.register.checkPass !== ''){
-                        this.$refs.register.validateField('checkPass')
+        data() {
+            var checkNumber = (rule, value, callback) => {
+                if (!value) {
+                    return callback(new Error('学号不能为空'));
+                }
+                setTimeout(() => {
+                    if (!Number.isInteger(value)) {
+                        callback(new Error('请输入数字值'));
+                    } else {
+                            callback();
                     }
-                    callback()
+                }, 1000);
+            };
+            var validatePass = (rule, value, callback) => {
+                if (value === '') {
+                    callback(new Error('请输入密码'));
+                } else {
+                    if (this.ruleForm.checkPass !== '') {
+                        this.$refs.ruleForm.validateField('checkPass');
+                    }
+                    callback();
                 }
             };
-            // 再次确认密码验证
-            var validateCheckPass = (rule,value,callback)=>{
+            var validatePass2 = (rule, value, callback) => {
                 if (value === '') {
                     callback(new Error('请再次输入密码'));
-                } else if (value !== this.register.password) {
+                } else if (value !== this.ruleForm.pass) {
                     callback(new Error('两次输入密码不一致!'));
                 } else {
                     callback();
                 }
             };
-            // 手机号码验证
-            var validatePhone = (rule,value,callback)=>{
-                var reg=11 && /^((13|14|15|16|17|18|19)[0-9]{1}\d{8})$/;
-                if (value === '') {
-                    callback(new Error('请输入手机号'));
-                } else if (!reg.test(value)) {
-                    callback(new Error('手机号码格式不正确!'));
-                } else {
-                    callback();
+            return {
+                ruleForm: {
+                    pass: '',
+                    checkPass: '',
+                    number: ''
+                },
+                rules: {
+                    pass: [
+                        { validator: validatePass, trigger: 'blur' }
+                    ],
+                    checkPass: [
+                        { validator: validatePass2, trigger: 'blur' }
+                    ],
+                    number: [
+                        { validator: checkNumber, trigger: 'blur' }
+                    ]
                 }
             };
-
-
-            return {
-                register: {
-                    name:'',
-                    phone: '',
-                    password:'',
-                    checkPass:'',
-                },
-                rules:{
-                    phone:[{validator: validatePhone, trigger: 'blur'}],
-                    password:[{validator: validatePass, trigger: 'blur'}],
-                    checkPass:[{validator: validateCheckPass, trigger: 'blur'}]
-                },
+        },
+        methods: {
+            submitForm(formName) {
+                this.$refs[formName].validate((valid) => {
+                    if (valid) {
+                        alert('注册成功!');
+                    } else {
+                        console.log('注册失败!!');
+                        return false;
+                    }
+                });
             }
         }
     }
