调整学生选择导师页面

--- a/src/main/webapp/WEB-INF/pages/student/selectTutor.html
+++ b/src/main/webapp/WEB-INF/pages/student/selectTutor.html
@@ -33,8 +33,12 @@
                                 label:'name'
                                         }"
                         :titles="['导师列表', '志愿列表']"
+                        :target-order="push"
                 >
                 </el-transfer>
+                <!--                <p>{{chosen}}</p>-->
+<!--                这里获取chosen到的id，封存该学生的志愿-->
+                <el-button @click="submit">确认志愿</el-button>
             </template>
         </el-main>
     </el-container>
@@ -64,5 +68,13 @@
         }
     })
 </script>
-
+    <style>
+    .el-transfer-panel{
+        width: 400px;
+        height: 500px;
+    }
+    .el-transfer-panel__list.is-filterable{
+        height: 400px;
+    }
+    </style>
 </html>
