--- a/src/main/webapp/WEB-INF/pages/index.html
+++ b/src/main/webapp/WEB-INF/pages/index.html
@@ -22,23 +22,25 @@
 <body>
 <div id="app">
     <div class="login-wrap">
+        <img class="logo_img" alt="" src="static/imgs/mengxi.jpg"/>
         <el-row type="flex" justify="center">
             <el-form ref="loginForm" :model="user" :rules="rules" status-icon label-width="80px">
-                <h3>登录</h3>
+               <center><h3>登录</h3></center>
                 <hr>
                 <el-form-item prop="number" label="账号">
-                    <el-input v-model="user.number" placeholder="请输入学号" prefix-icon></el-input>
+                    <el-input v-model="user.number" placeholder="请输入账号" prefix-icon></el-input>
                 </el-form-item>
                 <el-form-item id="password" prop="password" label="密码">
                     <el-input type="password" v-model="user.password" show-password placeholder="请输入密码"></el-input>
                 </el-form-item>
                 <!--                还没做，最后在做这个-->
-                <router-link to="/">找回密码</router-link>
+<!--                <router-link to="/">找回密码</router-link>-->
                 <!--              这里跳注册页面-->
-                <el-button @click="toRegister()">注册账号</el-button>
+<!--                <el-button @click="toRegister()">注册账号</el-button>-->
                 <el-form-item>
                     <el-button type="primary" icon="el-icon-upload" @click="doLoginForStu()">学生登录</el-button>
                     <el-button type="primary" icon="el-icon-upload" @click="doLoginForTutor()">教师登录</el-button>
+                    <el-button type="primary" icon="el-icon-upload" @click="toRegister()">注册账号</el-button>
                 </el-form-item>
             </el-form>
         </el-row>
@@ -57,7 +59,7 @@
         methods: {
             doLoginForStu() {
                 if (!this.user.number) {
-                    this.$message.error("请输入学号！");
+                    this.$message.error("请输入账号！");
                     return;
                 } else if (!this.user.password) {
                     this.$message.error("请输入密码！");
@@ -106,5 +108,66 @@
         }
     })
 </script>
+<style>
+
+    .logo_img{
+        /*设置背景图片自适应全屏*/
+        position:fixed;
+
+        top: 0;
+
+        left: 0;
+
+        width:100%;
+
+        height:100%;
+
+        min-width: 1000px;
+
+        z-index:-10;
+
+        zoom: 1;
+
+        background-color: #fff;
+
+        /*background: url("static/pictures/libarary.jpg");*/
+
+        background-repeat: no-repeat;
+
+        background-size: cover;
+
+        -webkit-background-size: cover;
+
+        -o-background-size: cover;
+
+        background-position: center 0;
+
+    }
+
+</style>
+    <style lang="less" scoped>
+
+                       .el-form {
+
+                           width: 500px;
+
+                           border: 1px solid #000;
+
+                           padding: 40px;
+
+                           margin: 0 auto;
+
+                           margin-top: 200px;
+
+                           padding-left:20px;
+
+                           padding-bottom: 20px;
+
+                           border-radius: 10px;
+
+                           background: #f0f0f0;
+
+                       }
+</style>
 </body>
 </html>
